--- a/go-record.html
+++ b/go-record.html
@@ -435,6 +435,26 @@
       <div class="point even">
         90
       </div>
+      <div>
+        <svg height="45" width="45">
+          <polygon points="25,12 3,22 25,32" style="fill:black;stroke-width:0" />
+          <line x1="2" y1="12" x2="2" y2="32" style="stroke:blue;stroke-width:3" />
+          <line x1="30" y1="12" x2="30" y2="32" style="stroke:white;stroke-width:3" />
+        </svg>
+        <svg height="45" width="45">
+          <polygon points="22,12 0,22 22,32" style="fill:black;stroke-width:0" />
+        </svg>
+        <svg height="45" width="45">
+          <polygon points="22,12 0,22 22,32" style="fill:black;stroke-width:0" />
+        </svg>
+        <svg height="45" width="45">
+          <polygon points="22,12 0,22 22,32" style="fill:black;stroke-width:0" />
+          <line x1="2" y1="12" x2="2" y2="32" style="stroke:blue;stroke-width:3" />
+        </svg>
+        <svg height="45" width="45">
+          <polygon points="22,12 44,22 22,32" style="fill:black;stroke-width:0" />
+        </svg>
+      </div>
     </div>
   </body>
 </html>
